<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregar_destino"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_destino"
            android:inputType="text" />

        <Spinner
            android:id="@+id/spinnerPais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/etPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio"
            android:inputType="numberDecimal"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:hint="@string/descripcion_viaje"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:layout_marginTop="12dp" />

        <ImageView
            android:id="@+id/ivImagen"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_gallery"
            android:contentDescription="@string/imagen_destino" />

        <Button
            android:id="@+id/btnImagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar_imagen"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar_destino"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</ScrollView>