<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/rosa_claro"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/rosa_oscuro"
        android:gravity="center"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/destinos_turisticos"
        android:textSize="17sp"
        android:textColor="@color/azul_viaje"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="14dp" /> />

    <Button
        android:id="@+id/btnAgregarDestino"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/agregar_destino"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/rosa_principal"
        android:layout_marginBottom="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDestinos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="8dp" />

</LinearLayout>